ASSEMBLY = Tripod.Gui
TARGET = library
LINK = $(REF_TRIPOD_GUI)
SOURCES =  \
	Tripod.Gui/GlobalActions.cs \
	Tripod.Gui/TripodActionManager.cs \
	Tripod.Model.Gui/IPhotoGridCaptionRenderer.cs \
	Tripod.Model.Gui/PhotoGridDateCaptionRender.cs \
	Tripod.Model.Gui/PhotoGridTextCaptionRenderer.cs \
	Tripod.Model.Gui/PhotoGridView.cs \
	Tripod.Model.Gui/PhotoGridViewChild.cs \
	Tripod.Model.Gui/PhotoGridViewLayout.cs 

RESOURCES = \
	Resources/Tripod.Gui.UIActions.xml

include $(top_srcdir)/build/build.mk
