ASSEMBLY = Tripod.Sources.LocalFolder
TARGET = library
LINK = $(LINK_TRIPOD_CORE_DEPS)
INSTALL_DIR = $(EXTENSIONS_INSTALL_DIR)

SOURCES =  \
	Tripod.Sources.LocalFolder/LocalFilePhoto.cs \
	Tripod.Sources.LocalFolder/LocalFolderNamingPolicy.cs \
	Tripod.Sources.LocalFolder/LocalFolderPhotoSource.cs \
	Tripod.Sources.LocalFolder/LocalFolderPhotoSourceInfo.cs 

RESOURCES = \
	Tripod.Sources.LocalFolder.addin.xml

include $(top_srcdir)/build/build.mk
