SUBDIRS = \
    generator \
    gio

ASSEMBLY = GioSharp
TARGET = library
LINK = $(GTKSHARP_LIBS)
ASSEMBLY_BUILD_FLAGS = -unsafe
SOURCES = \
    gio/AssemblyInfo.cs \
    gio/FileFactory.cs \
    gio/GioStream.cs \
    gio/generated/AppInfoAdapter.cs \
    gio/generated/AppInfoCreateFlags.cs \
    gio/generated/AppInfo.cs \
    gio/generated/AppLaunchContext.cs \
    gio/generated/AskPasswordFlags.cs \
    gio/generated/AskPasswordHandler.cs \
    gio/generated/AskQuestionHandler.cs \
    gio/generated/AsyncReadyCallback.cs \
    gio/generated/AsyncResultAdapter.cs \
    gio/generated/AsyncResult.cs \
    gio/generated/BufferedInputStream.cs \
    gio/generated/BufferedOutputStream.cs \
    gio/generated/Cancellable.cs \
    gio/generated/ChangedHandler.cs \
    gio/generated/Content.cs \
    gio/generated/DataInputStream.cs \
    gio/generated/DataOutputStream.cs \
    gio/generated/DataStreamByteOrder.cs \
    gio/generated/DataStreamNewlineType.cs \
    gio/generated/DesktopAppInfo.cs \
    gio/generated/DesktopAppInfoLookupAdapter.cs \
    gio/generated/DesktopAppInfoLookup.cs \
    gio/generated/DriveAdapter.cs \
    gio/generated/DriveChangedHandler.cs \
    gio/generated/DriveConnectedHandler.cs \
    gio/generated/Drive.cs \
    gio/generated/DriveDisconnectedHandler.cs \
    gio/generated/DriveEjectButtonHandler.cs \
    gio/generated/Emblem.cs \
    gio/generated/EmblemedIcon.cs \
    gio/generated/EmblemOrigin.cs \
    gio/generated/FileAdapter.cs \
    gio/generated/FileAttributeInfo.cs \
    gio/generated/FileAttributeInfoFlags.cs \
    gio/generated/FileAttributeInfoList.cs \
    gio/generated/FileAttributeMatcher.cs \
    gio/generated/FileAttributeStatus.cs \
    gio/generated/FileAttributeType.cs \
    gio/generated/FileCopyFlags.cs \
    gio/generated/FileCreateFlags.cs \
    gio/generated/File.cs \
    gio/generated/FileEnumerator.cs \
    gio/generated/FileIcon.cs \
    gio/generated/FileInfo.cs \
    gio/generated/FileInputStream.cs \
    gio/generated/FileMonitor.cs \
    gio/generated/FileMonitorEvent.cs \
    gio/generated/FileMonitorFlags.cs \
    gio/generated/FilenameCompleter.cs \
    gio/generated/FileOutputStream.cs \
    gio/generated/FileProgressCallback.cs \
    gio/generated/FileQueryInfoFlags.cs \
    gio/generated/FileReadMoreCallback.cs \
    gio/generated/FilesystemPreviewType.cs \
    gio/generated/FileType.cs \
    gio/generated/FilterInputStream.cs \
    gio/generated/FilterOutputStream.cs \
    gio/generated/GLibSharp.GSourceFuncNative.cs \
    gio/generated/GSharp.AsyncReadyCallbackNative.cs \
    gio/generated/GSharp.FileProgressCallbackNative.cs \
    gio/generated/GSharp.FileReadMoreCallbackNative.cs \
    gio/generated/GSharp.IOSchedulerJobFuncNative.cs \
    gio/generated/GSharp.ReallocFuncNative.cs \
    gio/generated/GSharp.SimpleAsyncThreadFuncNative.cs \
    gio/generated/IconAdapter.cs \
    gio/generated/Icon.cs \
    gio/generated/InputStream.cs \
    gio/generated/Io.cs \
    gio/generated/IOErrorEnum.cs \
    gio/generated/IOExtension.cs \
    gio/generated/IOExtensionPoint.cs \
    gio/generated/IOModule.cs \
    gio/generated/IOSchedulerJob.cs \
    gio/generated/IOSchedulerJobFunc.cs \
    gio/generated/LoadableIconAdapter.cs \
    gio/generated/LoadableIcon.cs \
    gio/generated/LocalDirectoryMonitor.cs \
    gio/generated/LocalFileEnumerator.cs \
    gio/generated/MemoryInputStream.cs \
    gio/generated/MemoryOutputStream.cs \
    gio/generated/MountAdapter.cs \
    gio/generated/MountAddedHandler.cs \
    gio/generated/MountChangedHandler.cs \
    gio/generated/Mount.cs \
    gio/generated/MountMountFlags.cs \
    gio/generated/MountOperation.cs \
    gio/generated/MountOperationResult.cs \
    gio/generated/MountPreUnmountHandler.cs \
    gio/generated/MountRemovedHandler.cs \
    gio/generated/MountUnmountFlags.cs \
    gio/generated/NativeVolumeMonitor.cs \
    gio/generated/ObjectManager.cs \
    gio/generated/OutputStream.cs \
    gio/generated/OutputStreamSpliceFlags.cs \
    gio/generated/PasswordSave.cs \
    gio/generated/ReallocFunc.cs \
    gio/generated/ReplyHandler.cs \
    gio/generated/SeekableAdapter.cs \
    gio/generated/Seekable.cs \
    gio/generated/SimpleAsyncResult.cs \
    gio/generated/SimpleAsyncThreadFunc.cs \
    gio/generated/Simple.cs \
    gio/generated/ThemedIcon.cs \
    gio/generated/Vfs.cs \
    gio/generated/VolumeAdapter.cs \
    gio/generated/VolumeAddedHandler.cs \
    gio/generated/VolumeChangedHandler.cs \
    gio/generated/Volume.cs \
    gio/generated/VolumeMonitor.cs \
    gio/generated/VolumeRemovedHandler.cs

include $(top_srcdir)/build/build.mk

EXTRA_DIST += GioSharp.dll.config
module_SCRIPTS += GioSharp.dll.config
