ASSEMBLY = Hyena.Gui
ASSEMBLY_BUILD_FLAGS = -unsafe
TARGET = library
LINK = $(REF_HYENA_GUI)
SOURCES =  \
	Hyena.Data.Gui/Accessibility/ColumnCellAccessible.cs \
	Hyena.Data.Gui/Accessibility/ColumnCellTextAccessible.cs \
	Hyena.Data.Gui/Accessibility/ColumnHeaderCellTextAccessible.cs \
	Hyena.Data.Gui/Accessibility/ICellAccessibleParent.cs \
	Hyena.Data.Gui/Accessibility/ListViewAccessible.cs \
	Hyena.Data.Gui/Accessibility/ListViewAccessible_Selection.cs \
	Hyena.Data.Gui/Accessibility/ListViewAccessible_Table.cs \
	Hyena.Data.Gui/CellContext.cs \
	Hyena.Data.Gui/Column.cs \
	Hyena.Data.Gui/ColumnCell.cs \
	Hyena.Data.Gui/ColumnCellCheckBox.cs \
	Hyena.Data.Gui/ColumnCellRating.cs \
	Hyena.Data.Gui/ColumnCellText.cs \
	Hyena.Data.Gui/ColumnController.cs \
	Hyena.Data.Gui/ColumnHeaderCellText.cs \
	Hyena.Data.Gui/DataViewChild.cs \
	Hyena.Data.Gui/DataViewLayout.cs \
	Hyena.Data.Gui/DataViewLayoutGrid.cs \
	Hyena.Data.Gui/IHeaderCell.cs \
	Hyena.Data.Gui/IInteractiveCell.cs \
	Hyena.Data.Gui/IListView.cs \
	Hyena.Data.Gui/ISizeRequestCell.cs \
	Hyena.Data.Gui/ITextCell.cs \
	Hyena.Data.Gui/ITooltipCell.cs \
	Hyena.Data.Gui/ListView/ListView.cs \
	Hyena.Data.Gui/ListView/ListView_Accessible.cs \
	Hyena.Data.Gui/ListView/ListView_DragAndDrop.cs \
	Hyena.Data.Gui/ListView/ListView_Header.cs \
	Hyena.Data.Gui/ListView/ListView_Interaction.cs \
	Hyena.Data.Gui/ListView/ListView_Model.cs \
	Hyena.Data.Gui/ListView/ListView_Rendering.cs \
	Hyena.Data.Gui/ListView/ListView_Windowing.cs \
	Hyena.Data.Gui/ListView/ListViewBase.cs \
	Hyena.Data.Gui/ListViewTestModule.cs \
	Hyena.Data.Gui/ObjectListView.cs \
	Hyena.Data.Gui/RowActivatedHandler.cs \
	Hyena.Data.Gui/SortableColumn.cs \
	Hyena.Gui.Canvas/Point.cs \
	Hyena.Gui.Canvas/Rect.cs \
	Hyena.Gui.Canvas/Size.cs \
	Hyena.Gui.Canvas/Thickness.cs \
	Hyena.Gui.Dialogs/ExceptionDialog.cs \
	Hyena.Gui.Dialogs/VersionInformationDialog.cs \
	Hyena.Gui.Theatrics/Actor.cs \
	Hyena.Gui.Theatrics/Choreographer.cs \
	Hyena.Gui.Theatrics/Pulsator.cs \
	Hyena.Gui.Theatrics/SingleActorStage.cs \
	Hyena.Gui.Theatrics/Stage.cs \
	Hyena.Gui.Theatrics/Tests/ChoreographerTests.cs \
	Hyena.Gui.Theming/GtkColors.cs \
	Hyena.Gui.Theming/GtkTheme.cs \
	Hyena.Gui.Theming/Theme.cs \
	Hyena.Gui.Theming/ThemeContext.cs \
	Hyena.Gui.Theming/ThemeEngine.cs \
	Hyena.Gui/ActionManager.cs \
	Hyena.Gui/BaseWidgetAccessible.cs \
	Hyena.Gui/CairoDamageDebugger.cs \
	Hyena.Gui/CairoExtensions.cs \
	Hyena.Gui/CleanRoomStartup.cs \
	Hyena.Gui/CompositeUtils.cs \
	Hyena.Gui/Contrast.cs \
	Hyena.Gui/DragDropList.cs \
	Hyena.Gui/EditableEraseAction.cs \
	Hyena.Gui/EditableInsertAction.cs \
	Hyena.Gui/EditableUndoAdapter.cs \
	Hyena.Gui/GtkUtilities.cs \
	Hyena.Gui/GtkWorkarounds.cs \
	Hyena.Gui/HyenaActionGroup.cs \
	Hyena.Gui/PangoCairoHelper.cs \
	Hyena.Gui/PangoExtensions.cs \
	Hyena.Gui/PixbufImageSurface.cs \
	Hyena.Gui/RatingRenderer.cs \
	Hyena.Gui/ShadingTestWindow.cs \
	Hyena.Gui/TestModuleAttribute.cs \
	Hyena.Gui/TestModuleRunner.cs \
	Hyena.Gui/TooltipSetter.cs \
	Hyena.Query.Gui/DateQueryValueEntry.cs \
	Hyena.Query.Gui/FileSizeQueryValueEntry.cs \
	Hyena.Query.Gui/IntegerQueryValueEntry.cs \
	Hyena.Query.Gui/NullQueryValueEntry.cs \
	Hyena.Query.Gui/QueryBox.cs \
	Hyena.Query.Gui/QueryDebugger.cs \
	Hyena.Query.Gui/QueryLimitBox.cs \
	Hyena.Query.Gui/QueryTermBox.cs \
	Hyena.Query.Gui/QueryTermsBox.cs \
	Hyena.Query.Gui/QueryValueEntry.cs \
	Hyena.Query.Gui/RelativeTimeSpanQueryValueEntry.cs \
	Hyena.Query.Gui/StringQueryValueEntry.cs \
	Hyena.Query.Gui/TimeSpanQueryValueEntry.cs \
	Hyena.Widgets/AnimatedBox.cs \
	Hyena.Widgets/AnimatedHBox.cs \
	Hyena.Widgets/AnimatedImage.cs \
	Hyena.Widgets/AnimatedVBox.cs \
	Hyena.Widgets/AnimatedWidget.cs \
	Hyena.Widgets/ComplexMenuItem.cs \
	Hyena.Widgets/EntryPopup.cs \
	Hyena.Widgets/GenericToolItem.cs \
	Hyena.Widgets/HigMessageDialog.cs \
	Hyena.Widgets/ImageButton.cs \
	Hyena.Widgets/MenuButton.cs \
	Hyena.Widgets/MessageBar.cs \
	Hyena.Widgets/PulsingButton.cs \
	Hyena.Widgets/RatingEntry.cs \
	Hyena.Widgets/RatingMenuItem.cs \
	Hyena.Widgets/RoundedFrame.cs \
	Hyena.Widgets/ScrolledWindow.cs \
	Hyena.Widgets/SegmentedBar.cs \
	Hyena.Widgets/SimpleTable.cs \
	Hyena.Widgets/SmoothScrolledWindow.cs \
	Hyena.Widgets/TextViewEditable.cs \
	Hyena.Widgets/WrapLabel.cs

RESOURCES =

include $(top_srcdir)/build/build.mk

EXTRA_DIST += Hyena.Gui.dll.config
module_SCRIPTS += Hyena.Gui.dll.config

