ASSEMBLY = Mono.Data.Sqlite
TARGET = library
LINK = $(REF_SQLITE)
ASSEMBLY_BUILD_FLAGS = -unsafe -d:MONO_BACKWARD_COMPAT

SOURCES =  \
	Mono.Data.Sqlite/SQLite3.cs \
	Mono.Data.Sqlite/SQLite3_UTF16.cs \
	Mono.Data.Sqlite/SQLiteBase.cs \
	Mono.Data.Sqlite/SQLiteCommand.cs \
	Mono.Data.Sqlite/SQLiteCommandBuilder.cs \
	Mono.Data.Sqlite/SQLiteConnection.cs \
	Mono.Data.Sqlite/SQLiteConnectionStringBuilder.cs \
	Mono.Data.Sqlite/SQLiteConvert.cs \
	Mono.Data.Sqlite/SQLiteDataAdapter.cs \
	Mono.Data.Sqlite/SQLiteDataReader.cs \
	Mono.Data.Sqlite/SqliteDataSourceEnumerator.cs \
	Mono.Data.Sqlite/SQLiteEnlistment.cs \
	Mono.Data.Sqlite/SQLiteException.cs \
	Mono.Data.Sqlite/SQLiteFactory.cs \
	Mono.Data.Sqlite/SQLiteFunction.cs \
	Mono.Data.Sqlite/SQLiteFunctionAttribute.cs \
	Mono.Data.Sqlite/SQLiteMetaDataCollectionNames.cs \
	Mono.Data.Sqlite/SQLiteParameter.cs \
	Mono.Data.Sqlite/SQLiteParameterCollection.cs \
	Mono.Data.Sqlite/SQLiteStatement.cs \
	Mono.Data.Sqlite/SQLiteTransaction.cs \
	Mono.Data.Sqlite/SR.Designer.cs \
	Mono.Data.Sqlite/UnsafeNativeMethods.cs

include $(top_srcdir)/build/build.mk

